Fixed edge cases when image could be too high or too wide (#311)

--- a/frontend/src/screens/AddPath/components/ClickableCourseCard/styles.module.sass
+++ b/frontend/src/screens/AddPath/components/ClickableCourseCard/styles.module.sass
@@ -29,6 +29,7 @@ $image_width: 10em
     object-fit: cover
     opacity: 0.8
     position: relative
+    min-width: 100%
 
   &_cover
     position: absolute
